test/files/neg/t12843.scala

class C {
  val b = collection.mutable.ListBuffer.empty[Int]
  def f = b.remove
  def g = b.update
}
