test/files/neg/t12843.check
t12843.scala:4: error: ambiguous reference to overloaded definition,
both method remove in class ListBuffer of type (idx: Int, count: Int): Unit
and  method remove in class ListBuffer of type (idx: Int): Int
match expected type ?
  def f = b.remove
            ^
t12843.scala:5: error: missing argument list for method update in class ListBuffer of type (idx: Int, elem: Int): Unit
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `update _` or `update(_,_)` instead of `update`.
  def g = b.update
            ^
2 errors
